syntax = "proto3";

package intro;
option go_package="./pb";

//返回某组文案
message GroupIntroReq {
  string GroupName = 1;
  string Token = 2;
}
message GroupIntroResp {
  string Intro = 1;
}

//返回招募信息
message RecruitInfoReq{
  string Token = 1;
  string URL = 2;
}
message RecruitInfoResp{
  string Info = 1;
}

service IntroClient {
  rpc GetGroupIntro(GroupIntroReq) returns(GroupIntroResp);
  rpc GetRecruitInfo(RecruitInfoReq) returns(RecruitInfoResp);
}
